--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ entrypoints==0.4
 fonttools==4.33.3
 hijri-converter==2.2.4
 holidays==0.14.2
+Hydra==2.5
 ipykernel==6.14.0
 ipython==7.34.0
 jedi==0.18.1
@@ -34,6 +35,7 @@ PyMeeus==0.5.11
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.1
+PyYAML==6.0
 pyzmq==23.1.0
 scikit-learn==1.0.2
 scipy==1.7.3
